# SequenceTransformer

./: CMakeLists.txt  README.md
SequenceTransformer/: CMakeLists.txt  SequenceTransformer.py
SequenceTransformer/Resources/UI/: SequenceTransformer.ui
